stuff/prod/k8s/omegaup/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: php
        image: omegaup/php:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: frontend-secret
          mountPath: /etc/omegaup/frontend
        - name: omegaup-secret
          mountPath: /opt/omegaup/frontend/server/config.php
          subPath: config.php
        - name: php-config
          mountPath: /etc/php/7.4/fpm/php-fpm.conf
          subPath: php-fpm.conf
        - name: omegaup
          mountPath: /opt/omegaup
        - name: varlog
          mountPath: /var/log
      - name: nginx
        image: omegaup/nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
        - name: omegaup
          mountPath: /opt/omegaup
        - name: varlog
          mountPath: /var/log
      - name: fluentbit
        image: fluent/fluent-bit:1.7
        command: ['/fluent-bit/bin/fluent-bit', '--quiet', '-c', '/fluent-bit/etc/fluent-bit.conf']
        volumeMounts:
        - name: fluentbit-config
          mountPath: /fluent-bit/etc/
        - name: varlog
          mountPath: /var/log
      volumes:
      - name: frontend-secret
        secret:
          secretName: frontend-secret
      - name: omegaup-secret
        secret:
          secretName: omegaup-secret
      - name: nginx-config
        configMap:
          name: nginx-config
      - name: php-config
        configMap:
          name: php-config
      - name: fluentbit-config
        configMap:
          name: fluentbit-config
      - name: varlog
        emptyDir: {}
      - name: omegaup
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: omegaup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
